[package]
name = "submission"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking", "wayland", "bevy_text", "trace"] }
bevy-inspector-egui = "0.21.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"
