[package]
name = "flock-flow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_spatial = "0.7.0"
interpolation = "0.3.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"
bevy-inspector-egui = { version = "0.21.0", optional = true }
bevy_editor_pls = { version = "0.6.0", optional = true }

[features]
default = []
inspector = ["dep:bevy-inspector-egui", "dep:bevy_editor_pls"]
